--- a/Project_3_Part_2.ipynb
+++ b/Project_3_Part_2.ipynb
@@ -49,7 +49,7 @@
         }
       ],
       "source": [
-        "with open('/Users/Aaron/.secret/tmdb_api.json', 'r') as f:\n",
+        "with open('/Users/ihen85/.secret/tmdb_api.json', 'r') as f:\n",
         "    login = json.load(f)\n",
         "login.keys()"
       ]
